creazione struttura base sidebar (mobile first)

--- a/index.html
+++ b/index.html
@@ -10,15 +10,104 @@
     Studente: Federico Bacci. 
     Corso: Boolean corso Web Development classe #144">
 
+    <link rel="icon" href="./assets/img/favicon.ico">
+
     <!-- FONT AWESOME 6.7.2 CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="">
+
+    <div class="page-wrapper">
+        <main>
+            <div id="sidebar">
+                <div class="sidebar-main">
+                    <!-- Messe momentaneamente come immmagini -->
+                    <!-- Ancora da decidere se utilizzare filtri per cambiare colore oppure se inserire codice SVG in HTML e controllare tramite fill -->
+                    <img id="logo-small" src="./assets/img/logo-small.svg" alt="Logo Spotify small">
+                    <img id="logo-big" src="./assets/img/logo.svg" alt="Logo Spotify big">
+
+                    <nav class="sidebar-menu">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <img src="./assets/img/home.svg" alt="Home">
+                                    <span class="label">Home</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./assets/img/search.svg" alt="Search">
+                                    <span class="label">Cerca</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./assets/img/libreria.svg" alt="Libreria">
+                                    <span class="label">La tua libreria</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="sidebar-playlist">
+                        <nav class="playlists">
+                            <ul>
+                                <li>
+                                    <a href="#">Crea Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="sidebar-footer">
+                    <div class="install-app">
+                        <img src="./assets/img/download.svg" alt="Download">
+                        <span class="label">Installa app</span>
+                    </div>
+                    <div class="profile-picture">
+                        <img src="./assets/img/profile.svg" alt="Profile picture">
+                    </div>
+                </div>
+            </div>
+            <div id="main-content">
+
+            </div>
+        </main>
+        <div id="player">
+
+        </div>
+    </div>
 
 </body>
 
