implementazione comportamento responsive sidebar

--- a/index.html
+++ b/index.html
@@ -54,10 +54,16 @@
                         </ul>
                     </nav>
                     <div class="sidebar-playlist">
+                        <h2>PLAYLIST</h2>
                         <nav class="playlists">
                             <ul>
                                 <li>
-                                    <a href="#">Crea Playlist</a>
+                                    <a href="#">
+                                        <span class="add-playlist">
+                                            +
+                                        </span>
+                                        Crea Playlist
+                                    </a>
                                 </li>
                                 <li>
                                     <a href="#">Nome Playlist</a>
@@ -95,8 +101,11 @@
                         <img src="./assets/img/download.svg" alt="Download">
                         <span class="label">Installa app</span>
                     </div>
-                    <div class="profile-picture">
-                        <img src="./assets/img/profile.svg" alt="Profile picture">
+                    <div class="profile">
+                        <div class="profile-picture">
+                            <img src="./assets/img/profile.svg" alt="Profile picture">
+                        </div>
+                        <span class="label">John Doe</span>
                     </div>
                 </div>
             </div>
