sistemazione generale della sidebar

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                                 <li>
                                     <a href="#">Nome Playlist</a>
                                 </li>
-                                <li>
+                                <!-- Test creazione overflow -->
+                                <!-- <li>
                                     <a href="#">Nome Playlist</a>
                                 </li>
                                 <li>
@@ -92,6 +93,15 @@
                                 <li>
                                     <a href="#">Nome Playlist</a>
                                 </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li>
+                                <li>
+                                    <a href="#">Nome Playlist</a>
+                                </li> -->
                             </ul>
                         </nav>
                     </div>
@@ -110,7 +120,41 @@
                 </div>
             </div>
             <div id="main-content">
-
+                <!-- TEST CORRETTO FUNZIONAMENTO SCROLL #MAIN-CONTENT -->
+                <!-- <section>
+                    <h1>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores suscipit et,
+                        laudantium tempore quasi eum ipsam, ex quo, nobis magni consequuntur eligendi quidem distinctio
+                        nesciunt dolore dignissimos rerum perferendis?
+                        Deleniti incidunt et, minus possimus, a corrupti iusto, voluptas voluptates voluptatibus modi
+                        aliquid aperiam. Aspernatur commodi asperiores quas facere similique praesentium officiis,
+                        eveniet quaerat totam voluptate libero obcaecati eos ratione.
+                        Libero optio quas exercitationem quaerat fugiat tenetur voluptas delectus omnis nulla maiores
+                        enim odit consectetur vero accusantium, inventore eveniet, expedita iure fugit! Animi nam ipsam
+                        ipsa delectus assumenda necessitatibus neque?
+                        Nostrum voluptatum maiores iste, officia nam pariatur distinctio omnis vel, voluptates facere
+                        laudantium, ab minima. Provident, veniam! Ad consequuntur aspernatur alias reprehenderit, facere
+                        sed esse aliquam perferendis a placeat similique.
+                        Delectus quis minus iure natus esse totam odio amet, molestias harum error nam reprehenderit
+                        dolorem ullam nesciunt temporibus quasi hic? Aut repudiandae ipsam alias. Earum nostrum nam
+                        molestiae hic dicta.
+                        Sunt, nostrum? Saepe id fugiat unde accusamus modi, repudiandae expedita. A ab qui eius, omnis
+                        recusandae nemo porro eaque, suscipit, ducimus voluptates debitis nostrum modi corrupti
+                        dignissimos autem nesciunt magnam.
+                        Distinctio dolor numquam laborum est cupiditate. Iure eius error autem consequatur doloremque,
+                        quae fuga corrupti sit. Provident excepturi iste voluptate magni est rerum nam, sint quae
+                        repellendus placeat earum beatae?
+                        Saepe, accusantium dolor! Provident minus beatae dolor? Quod ad tenetur necessitatibus dolores,
+                        vitae doloribus dolore rerum reprehenderit. Obcaecati, quas. Iusto ratione nemo nostrum
+                        perspiciatis veniam sapiente vero quidem illo possimus.
+                        Tempora hic animi magni, quo delectus ea pariatur ullam nostrum quos soluta sequi facilis? Quod
+                        neque quas voluptate quae! Quo quasi distinctio nam expedita reprehenderit atque cum tempora!
+                        Omnis, excepturi?
+                        Libero fugit repudiandae natus officia rerum numquam reiciendis expedita modi eligendi quibusdam
+                        fuga, veniam distinctio et saepe qui voluptates quis cumque perspiciatis soluta sit quas alias
+                        itaque? Officiis, impedit officia?
+                    </h1>
+                </section> -->
             </div>
         </main>
         <div id="player">
