creazione della struttura di base del player

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="icon" href="./assets/img/favicon.ico">
 
     <!-- FONT AWESOME 6.7.2 CDN -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -127,12 +127,14 @@
                         laudantium tempore quasi eum ipsam, ex quo, nobis magni consequuntur eligendi quidem distinctio
                         nesciunt dolore dignissimos rerum perferendis?
                         <br />
+                        <br />
                         Deleniti incidunt et, minus possimus, a corrupti iusto, voluptas voluptates voluptatibus modi
                         aliquid aperiam. Aspernatur commodi asperiores quas facere similique praesentium officiis,
                         eveniet quaerat totam voluptate libero obcaecati eos ratione.
                         Libero optio quas exercitationem quaerat fugiat tenetur voluptas delectus omnis nulla maiores
                         enim odit consectetur vero accusantium, inventore eveniet, expedita iure fugit! Animi nam ipsam
                         ipsa delectus assumenda necessitatibus neque?
+                        <br />
                         <br />
                         Nostrum voluptatum maiores iste, officia nam pariatur distinctio omnis vel, voluptates facere
                         laudantium, ab minima. Provident, veniam! Ad consequuntur aspernatur alias reprehenderit, facere
@@ -141,7 +143,45 @@
                 </section>
             </div>
         </main>
-        <div id="player">
+        <div id="player" class="">
+
+            <div class="current-song debug">
+                <div class="song-info">
+                    <div class="song-media">
+                        A
+                        <!-- <img src="./assets/img/sinister.jpeg" alt=""> -->
+                    </div>
+                    <div class="song-details">
+                        <div>B</div>
+                        <div>C</div>
+                        <div>D</div>
+                    </div>
+                </div>
+                <div class="song-actions">
+                    <div>E</div>
+                    <div>F</div>
+                </div>
+            </div>
+            <div class="player-controls debug">
+                <div class="control-buttons">
+                    <div>G</div>
+                    <div>H</div>
+                    <div>I</div>
+                    <div>L</div>
+                    <div>M</div>
+                </div>
+                <div class="control-bar">
+                    <div>N</div>
+                    <div>O</div>
+                    <div>P</div>
+                </div>
+            </div>
+            <div class="player-options debug">
+                <div>Q</div>
+                <div>R</div>
+                <div>S</div>
+                <div>T</div>
+            </div>
 
         </div>
     </div>
