sistemazione adaptive della struttura generale del player

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="control-bar">
                     <div>N</div>
-                    <div>O</div>
+                    <div style="width: 200px;">O</div>
                     <div>P</div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                 <div>Q</div>
                 <div>R</div>
                 <div>S</div>
-                <div>T</div>
+                <div style="width: 50px;">T</div>
             </div>
 
         </div>
