Inserimento del contenuto e stilizzazione iniziale

--- a/index.html
+++ b/index.html
@@ -143,44 +143,82 @@
                 </section>
             </div>
         </main>
-        <div id="player" class="">
 
-            <div class="current-song debug">
+
+
+
+
+
+        <div id="player" class="">
+            <div class="current-song">
                 <div class="song-info">
                     <div class="song-media">
-                        A
-                        <!-- <img src="./assets/img/sinister.jpeg" alt=""> -->
+                        <img src="./assets/img/sinister.jpeg" alt="">
                     </div>
                     <div class="song-details">
-                        <div>B</div>
-                        <div>C</div>
-                        <div>D</div>
+                        <div>
+                            Sinister
+                        </div>
+                        <div>
+                            Brano
+                        </div>
+                        <div>
+                            Nome
+                        </div>
                     </div>
                 </div>
                 <div class="song-actions">
-                    <div>E</div>
-                    <div>F</div>
+                    <div>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div>
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
                 </div>
             </div>
-            <div class="player-controls debug">
+            <div class="player-controls">
                 <div class="control-buttons">
-                    <div>G</div>
-                    <div>H</div>
-                    <div>I</div>
-                    <div>L</div>
-                    <div>M</div>
+                    <div>
+                        <i class="fa-solid fa-shuffle"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-backward-step"></i>
+                    </div>
+                    <div>
+                        <i class="fa-regular fa-circle-play"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-forward-step"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-arrow-rotate-right"></i>
+                    </div>
                 </div>
-                <div class="control-bar">
-                    <div>N</div>
-                    <div style="width: 200px;">O</div>
-                    <div>P</div>
+                <div class="song-times">
+                    <div class="song-time">
+                        00:00
+                    </div>
+                    <div class="bar control-bar">
+                        <div class="bar-inside"></div>
+                    </div>
+                    <div class="song-time">
+                        00:00
+                    </div>
                 </div>
             </div>
-            <div class="player-options debug">
-                <div>Q</div>
-                <div>R</div>
-                <div>S</div>
-                <div style="width: 50px;">T</div>
+            <div class="player-options">
+                <div>
+                    <i class="fa-solid fa-list"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-display"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-volume-high"></i>
+                </div>
+                <div class="bar volume-bar">
+                    <div class="bar-inside"></div>
+                </div>
             </div>
 
         </div>
