creazione struttura base main

--- a/index.html
+++ b/index.html
@@ -119,28 +119,130 @@
                     </div>
                 </div>
             </div>
-            <div id="main-content">
-                <!-- TEST CORRETTO FUNZIONAMENTO SCROLL #MAIN-CONTENT -->
-                <section style="padding: 2rem;">
-                    <h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam maiores suscipit et,
-                        laudantium tempore quasi eum ipsam, ex quo, nobis magni consequuntur eligendi quidem distinctio
-                        nesciunt dolore dignissimos rerum perferendis?
-                        <br />
-                        <br />
-                        Deleniti incidunt et, minus possimus, a corrupti iusto, voluptas voluptates voluptatibus modi
-                        aliquid aperiam. Aspernatur commodi asperiores quas facere similique praesentium officiis,
-                        eveniet quaerat totam voluptate libero obcaecati eos ratione.
-                        Libero optio quas exercitationem quaerat fugiat tenetur voluptas delectus omnis nulla maiores
-                        enim odit consectetur vero accusantium, inventore eveniet, expedita iure fugit! Animi nam ipsam
-                        ipsa delectus assumenda necessitatibus neque?
-                        <br />
-                        <br />
-                        Nostrum voluptatum maiores iste, officia nam pariatur distinctio omnis vel, voluptates facere
-                        laudantium, ab minima. Provident, veniam! Ad consequuntur aspernatur alias reprehenderit, facere
-                        sed esse aliquam perferendis a placeat similique.
-                    </h1>
-                </section>
+            <div id="main-content" class="">
+
+                <div class="upgrade-app">
+                    <button class="btn btn-outline btn-upgrade-app">
+                        Effettua l'upgrade
+                    </button>
+                </div>
+
+                <nav id="main-content-menu">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                In evidenza
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Podcast
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Classifiche
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Generi e mood
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Nuove uscite
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Scopri
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-100">
+                            <h2>Recently played</h2>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-100">
+                            <h2>Creato per John Doe</h2>
+                            <p class="subitle">
+                                Più ascolti, più accurati saranno i duggerimenti.
+                            </p>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-100">
+                            <h2>Artisti più popolari</h2>
+                            <p class="subitle">
+                                Più ascolti, più accurati saranno i duggerimenti.
+                            </p>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                        <div class="col-1-2">
+                            <div class="song-card" style="border: 1px solid;">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </main>
 
