stilizzazione main content per dispositivi mobile

--- a/index.html
+++ b/index.html
@@ -169,33 +169,69 @@
                             <h2>Recently played</h2>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/metal_lifting.jpg" alt="">
+                                <h3 class="song-title">
+                                    Heavy Metal
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/stranger.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)
+                                </h3>
+                                <p class="song-subtitle">
+                                    Kyle Dixon & Michael Stein
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/aquietplace.jpeg" alt="">
+                                <h3 class="song-title">
+                                    A quiet place
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/split.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Split
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/cure.jpeg" alt="">
+                                <h3 class="song-title">
+                                    A cure for wellness
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/sinister.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Sinister
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -209,13 +245,25 @@
                             </p>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/radar.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Release radar
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/mixdaily.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Daily mix 1
+                                </h3>
+                                <p class="song-subtitle">
+                                    Subtitle
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -229,13 +277,19 @@
                             </p>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/youg.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Lana del Rey
+                                </h3>
                             </div>
                         </div>
                         <div class="col-1-2">
-                            <div class="song-card" style="border: 1px solid;">
-
+                            <div class="song-card">
+                                <img src="./assets/img/einaudi.jpeg" alt="">
+                                <h3 class="song-title">
+                                    Ludovico Einaudi
+                                </h3>
                             </div>
                         </div>
                     </div>
