implementazione delle modifiche strutturali ai vari breakpoint del main-content

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <div class="col-100">
                             <h2>Recently played</h2>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/metal_lifting.jpg" alt="">
                                 <h3 class="song-title">
@@ -179,7 +179,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/stranger.jpeg" alt="">
                                 <h3 class="song-title">
@@ -190,7 +190,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/aquietplace.jpeg" alt="">
                                 <h3 class="song-title">
@@ -201,7 +201,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/split.jpeg" alt="">
                                 <h3 class="song-title">
@@ -212,7 +212,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/cure.jpeg" alt="">
                                 <h3 class="song-title">
@@ -223,7 +223,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/sinister.jpeg" alt="">
                                 <h3 class="song-title">
@@ -244,7 +244,7 @@
                                 Più ascolti, più accurati saranno i duggerimenti.
                             </p>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/radar.jpeg" alt="">
                                 <h3 class="song-title">
@@ -255,7 +255,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/mixdaily.jpeg" alt="">
                                 <h3 class="song-title">
@@ -276,7 +276,7 @@
                                 Più ascolti, più accurati saranno i duggerimenti.
                             </p>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/youg.jpeg" alt="">
                                 <h3 class="song-title">
@@ -284,7 +284,7 @@
                                 </h3>
                             </div>
                         </div>
-                        <div class="col-1-2">
+                        <div class="col-1-2 col-md-1-4 col-lg-1-6">
                             <div class="song-card">
                                 <img src="./assets/img/einaudi.jpeg" alt="">
                                 <h3 class="song-title">
