--- a/index.html
+++ b/index.html
@@ -25,87 +25,98 @@
     <div class="page-wrapper">
         <main>
             <div id="sidebar">
-                <div class="sidebar-main">
-                    <!-- Messe momentaneamente come immmagini -->
-                    <!-- Ancora da decidere se utilizzare filtri per cambiare colore oppure se inserire codice SVG in HTML e controllare tramite fill -->
+                <!-- Correzione: rimozione sidebar-main ed inserimento dei suoi figli direttamente nella sidebar -->
+                <!-- <div class="sidebar-main"> -->
+                <!-- Messe momentaneamente come immmagini -->
+                <!-- Ancora da decidere se utilizzare filtri per cambiare colore oppure se inserire codice SVG in HTML e controllare tramite fill -->
+                <figure class="logo">
                     <img id="logo-small" src="./assets/img/logo-small.svg" alt="Logo Spotify small">
                     <img id="logo-big" src="./assets/img/logo.svg" alt="Logo Spotify big">
+                </figure>
 
-                    <nav class="sidebar-menu">
+                <nav class="sidebar-menu">
+                    <ul>
+                        <li class="active">
+                            <a href="#">
+                                <img src="./assets/img/home.svg" alt="Home">
+                                <span class="label">Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./assets/img/search.svg" alt="Search">
+                                <span class="label">Cerca</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./assets/img/libreria.svg" alt="Libreria">
+                                <span class="label">La tua libreria</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="sidebar-playlist">
+                    <h2>PLAYLIST</h2>
+
+                    <a class="add-playlist" href="#">
+                        <span>
+                            +
+                        </span>
+                        Crea Playlist
+                    </a>
+
+                    <nav class="playlists">
                         <ul>
-                            <li>
+                            <!-- <li>
                                 <a href="#">
-                                    <img src="./assets/img/home.svg" alt="Home">
-                                    <span class="label">Home</span>
+                                    <span class="add-playlist">
+                                        +
+                                    </span>
+                                    Crea Playlist
                                 </a>
+                            </li> -->
+                            <li>
+                                <a href="#">Nome Playlist</a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="./assets/img/search.svg" alt="Search">
-                                    <span class="label">Cerca</span>
-                                </a>
+                                <a href="#">Nome Playlist</a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <img src="./assets/img/libreria.svg" alt="Libreria">
-                                    <span class="label">La tua libreria</span>
-                                </a>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <!-- Test creazione overflow -->
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
+                            </li>
+                            <li>
+                                <a href="#">Nome Playlist</a>
                             </li>
                         </ul>
                     </nav>
-                    <div class="sidebar-playlist">
-                        <h2>PLAYLIST</h2>
-                        <nav class="playlists">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <span class="add-playlist">
-                                            +
-                                        </span>
-                                        Crea Playlist
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <!-- Test creazione overflow -->
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                                <li>
-                                    <a href="#">Nome Playlist</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
                 </div>
+                <!-- </div> -->
                 <div class="sidebar-footer">
                     <div class="install-app">
                         <img src="./assets/img/download.svg" alt="Download">
@@ -336,7 +347,8 @@
                 <div class="control-buttons">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play"></i>
+                    <!-- <i class="fa-regular fa-circle-play"></i> -->
+                    <i class="fa-regular fa-circle-play fa-xl"></i>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-arrow-rotate-right"></i>
                 </div>
